feat: provide api to update order status
